// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EvaluationOrderStatusPage should render view correctly on cancelled payment 1`] = `
<div>
  <div
    class="public-evaluation-order-status-page MuiBox-root css-0"
  >
    <div
      class="public-evaluation-order-status-page__heading"
    >
      <h1
        class="MuiTypography-root MuiTypography-h1 css-10l7o3s-MuiTypography-root"
      >
        Maksu keskeytyi
      </h1>
      <div
        class="header-separator MuiBox-root css-0"
      />
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation3 public-evaluation-order-status-page__paper rows gapped css-1gtchvp-MuiPaper-root"
      style="--Paper-shadow: 0px 3px 3px -2px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 1px 8px 0px rgba(0,0,0,0.12);"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
      >
        Voit yrittää maksua uudestaan. Käsittelemme vain maksetut tarkistusarviointipyynnöt.
      </p>
      <a
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorSecondary MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorSecondary fit-content-max-width css-1mns5ui-MuiButtonBase-root-MuiButton-root"
        href="/yki/ilmoittautuminen"
        tabindex="0"
      >
        Takaisin aloitussivulle
      </a>
    </div>
  </div>
</div>
`;

exports[`EvaluationOrderStatusPage should render view correctly on payment error 1`] = `
<div>
  <div
    class="public-evaluation-order-status-page MuiBox-root css-0"
  >
    <div
      class="public-evaluation-order-status-page__heading"
    >
      <h1
        class="MuiTypography-root MuiTypography-h1 css-10l7o3s-MuiTypography-root"
      >
        Maksu epäonnistui
      </h1>
      <div
        class="header-separator MuiBox-root css-0"
      />
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation3 public-evaluation-order-status-page__paper rows gapped css-1gtchvp-MuiPaper-root"
      style="--Paper-shadow: 0px 3px 3px -2px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 1px 8px 0px rgba(0,0,0,0.12);"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
      >
        Tarkistusarviointimaksun maksaminen ei onnistunut. Yritä maksua uudestaan.
      </p>
      <a
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorSecondary MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorSecondary fit-content-max-width css-1mns5ui-MuiButtonBase-root-MuiButton-root"
        href="/yki/ilmoittautuminen"
        tabindex="0"
      >
        Takaisin aloitussivulle
      </a>
    </div>
  </div>
</div>
`;

exports[`EvaluationOrderStatusPage should render view correctly on successful payment 1`] = `
<div>
  <div
    class="public-evaluation-order-status-page MuiBox-root css-0"
  >
    <div
      class="public-evaluation-order-status-page__heading"
    >
      <h1
        class="MuiTypography-root MuiTypography-h1 css-10l7o3s-MuiTypography-root"
      >
        Olet pyytänyt tarkistusarviointia!
      </h1>
      <div
        class="header-separator MuiBox-root css-0"
      />
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation3 public-evaluation-order-status-page__paper rows gapped css-1gtchvp-MuiPaper-root"
      style="--Paper-shadow: 0px 3px 3px -2px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 1px 8px 0px rgba(0,0,0,0.12);"
    >
      <div>
        <p
          class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
        >
          Tutkinto
          :
           
          <b>
            suomi, keskitaso
          </b>
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
        >
          Testipäivä
          :
           
          <b>
            10/11/2023
          </b>
        </p>
      </div>
      <p
        class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
      >
        Sinulle on lähetetty vahvistus tarkistusarviointipyynnöstäsi sähköpostilla. Sähköpostissa on myös kuitti tarkistusarviointimaksustasi. Jos et ole saanut viestiä, tarkista roskapostikansiosi.
      </p>
      <a
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorSecondary MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorSecondary fit-content-max-width css-1mns5ui-MuiButtonBase-root-MuiButton-root"
        href="/yki/ilmoittautuminen"
        tabindex="0"
      >
        Takaisin aloitussivulle
      </a>
    </div>
  </div>
</div>
`;
